# LimbicEngine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE.md  LimbicEditor.cbp  LimbicEngine.cbp  LimbicEngine.sln  Makefile  README.md  cmake_install.cmake
Editor/: CMakeLists.txt
Editor/Include/: EditorTypes.h  EditorWindow.h  MapTreeModel.h  NodePropertiesWidget.h  RView_Qt.h  RWindow_Qt.h  SettingsDialog.h  ViewWidget.h  VulkanRenderer.h  VulkanWindow.h
Editor/Include/SceneTree/: SceneTreeModel.h
Editor/Qt/: Editor.ui  LimbicEditor.qrc  NodePropertiesWidget.ui  Widget.ui
Editor/Source/: EditorWindow.cpp  LimbicEditor.qrc  MapTreeModel.cpp  NodePropertiesWidget.cpp  RView_Qt.cpp  RWindow_Qt.cpp  SettingsDialog.cpp  ViewPortWidget.cpp  ViewWidget.cpp  VulkanRenderer.cpp  VulkanWindow.cpp  main.cpp
Editor/Source/SceneTree/: SceneTreeModel.cpp
Engine/: CMakeLists.txt
Engine/Include/: Game.h  LimbicProperties.h  LimbicTypes.h
Engine/Include/Entity/: EEntity.h  EPlayer.h  EStaticWorldGeometry.h  ETestCamera.h
Engine/Include/Renderer/: RVR.h  RVRUtil.h  RView.h  RWindow.h  RWindow_GLFW.h
Engine/Include/System/: EventSystem.h  IOSystem.h  IOSystem_GLFW.h  IOSystem_GLFWBinds.h  IOSystem_InputBinds.h  RenderSystem.h  ResourceSystem.h  WorldSystem.h
Engine/Shader/: hardcodedTriangle.frag  hardcodedTriangle.vert  postprocess.frag  postprocess.vert  spinning.frag  staticPBR.frag  staticPBR.vert  texmapped.frag
Engine/Source/: Game.cpp
Engine/Source/Entity/: EEntity.cpp  EPlayer.cpp  EStaticWorldGeometry.cpp  ETestCamera.cpp
Engine/Source/Renderer/: RVR.cpp  RView.cpp  RWindow.cpp  RWindow_GLFW.cpp
Engine/Source/System/: EventSystem.cpp  IOSystem_GLFW.cpp  RenderSystem.cpp  ResourceSystem.cpp  WorldSystem.cpp
Engine/Source/Utility/: VkUtil.cpp
Icon/: MissingTexture.ai  PointIcon.ai  SceneTree-Prop.ai  UnusedTexture.ai
Libraries/GLAD-4.5/Include/glad/: glad.h
LimbicEditor/: Editor.ui  EditorWindow.cpp  EditorWindow.h  LimbicEditor.vcxproj  LimbicEditor.vcxproj.filters  Map.cpp  Map.h  Node.cpp  Node.h  QSceneTreeModel.cpp  QSceneTreeModel.h  RResource.cpp  RResource.h  ResourceManager.cpp  ResourceManager.h  Settings.ui  SettingsDialog.cpp  SettingsDialog.h  TextureGroupListModel.cpp  TextureGroupListModel.h  TextureManager.ui  TextureManagerWidget.cpp  TextureManagerWidget.h  ViewPortWidget.cpp  ViewPortWidget.h
LimbicEditor/Icons/Vector/: SceneTree.ai
LimbicEditor_autogen/: moc_predefs.h  mocs_compilation.cpp
LimbicEditor_autogen/VH2KL7U2VT/: moc_MainWindow.cpp  moc_MaterialTreeItem.cpp
LimbicEditor_autogen/include/: ui_MainWindow.h
LimbicEngine/: EEntity.cpp  EEntity.h  EPlayer.cpp  EPlayer.h  EStaticWorldGeometry.cpp  EStaticWorldGeometry.h  ETestCamera.cpp  ETestCamera.h  EntityComponent.cpp  EntityComponent.h  EventSystem.h  GLFWIO.cpp  GLFWIO.h  Game.cpp  Game.h  IOSystem.h  IOSystem_GLFW.cpp  IOSystem_GLFW.h  IOSystem_GLFWBinds.h  IOSystem_InputBinds.h  IRenderer.h  LEntityComponent.cpp  LEntityComponent.h  LObject.cpp  LObject.h  LStaticMeshComponent.cpp  LStaticMeshComponent.h  LWorldComponent.cpp  LWorldComponent.h  LimbicEngine.vcxproj  LimbicEngine.vcxproj.filters  LimbicProperties.h  LimbicTypes.h  RenderSystem.cpp  RenderSystem.h  RendererOpenGL.cpp  RendererOpenGL.h  ResourceManager.cpp  ResourceManager.h  ResourceSystem.cpp  (+35 more)
LimbicEngine/outpost731/fonts/: terminal.fnt
LimbicEngine/outpost731/maps/: 731_c1a0.bsp  FourSquare.bsp  boxmap.bsp  boxmap_v2.bsp
LimbicEngine/outpost731/shaders/: map_default_frag.shader  map_default_vert.shader
LimbicEngine/outpost731/textures/: concrete.vtf
Outpost731/: CMakeLists.txt  Outpost731.vcxproj  main.cpp
Outpost731/Source/: Outpost731.cpp
src/LimbicEditor/: MainWindow.cpp  MainWindow.h  MainWindow.ui  Material.cpp  Material.h  MaterialTreeItem.cpp  MaterialTreeItem.h  main.cpp
src/LimbicEngine/: LimbicEngine.vcxproj  LimbicEngine.vcxproj.filters  error.hpp  io.cpp  map.cpp  map.hpp  pc_gl_render.cpp  player.cpp  render.hpp  textureLoader.hpp
